--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -13,13 +13,41 @@
             hey there partner! <br />
             <strong>{{ boldmessage }}</strong><br />
         </div>
+
+        <div>
+            <h2>Most Liked Categories</h2> 
+            {% if categories %}
+                <ul>
+                    {% for category in categories %}
+                        <li>
+                            <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a> - {{ category.likes }} likes
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <strong>There are no categories present.</strong>
+            {% endif %}
+        </div>
+
+        <div>
+            <h2>Most Viewed Pages</h2> 
+            {% if pages %}
+                <ul>
+                    {% for page in pages %}
+                        <li>
+                            <a href="/rango/page/{{ page.slug }}/">{{ page.title }}</a> - {{ page.views }} views
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <strong>There are no pages present.</strong>
+            {% endif %}
+        </div>
+
         <div>
             <a href="/rango/about/">About</a><br />
             <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
 
-        </div>
-        <div>
-            <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat." />
         </div>
     </body>
 </html>
